--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-list-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Maciekinit.github.io/todos-list-react",
+  "homepage": "https://maciekinit.github.io/todoes-list-create-react-app/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
