--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-scripts": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
