--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.19",
