adding a sample download of tasks

--- a/public/exampleTasks.json
+++ b/public/exampleTasks.json
@@ -1,12 +1,12 @@
 [
   {
-    "constent": "Oznaczyć to zadanie jako ukończone",
+    "content": "zjeść obiad",
     "done": false,
-    "id": "NcSnuJLNwukdtgj8NU8am"
+    "id": "tmZzf-o93_Fuivh8u8o3w"
   },
   {
-    "constent": "ukończyć wszystkie zadaniea",
+    "content": "zrobić zakupy",
     "done": false,
-    "id": "HSQSxlwu7gdaimlkeEJNGu"
+    "id": "Zu8fNunfaAtMXWI1sSB3l"
   }
 ]
